--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   bitsdojo_window: ^0.1.6
+  gap: ^3.0.1
+  fluentui_system_icons: ^1.1.264
 
 dev_dependencies:
   flutter_test:
