--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bitsdojo_window: ^0.1.6
   gap: ^3.0.1
   fluentui_system_icons: ^1.1.264
+  flutter_resizable_container: ^3.0.0
 
 dev_dependencies:
   flutter_test:
