Add torrent data models and close tab functionality; update dependencies and refactor main area layout

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   gap: ^3.0.1
   fluentui_system_icons: ^1.1.264
   flutter_resizable_container: ^3.0.0
+  dart_transmission_rpc: ^0.1.1
 
 dev_dependencies:
   flutter_test:
