--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_resizable_container: ^3.0.0
   dart_transmission_rpc: ^0.1.1
   flutter_context_menu: ^0.2.0
+  reorderables: ^0.6.0
+  font_awesome_flutter: ^10.8.0
 
 #dependency_overrides:
   #dio: ^5.0.6
@@ -75,9 +77,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+    - assets/icons/transmission.png
+    - assets/icons/qbittorrent.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
