--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,18 @@ dependencies:
   bitsdojo_window: ^0.1.6
   gap: ^3.0.1
   fluentui_system_icons: ^1.1.264
+  quickshift_transmission:
+    git:
+      url: https://github.com/FantixX/quickshift_transmission
+      ref: main
   flutter_resizable_container: ^3.0.0
-  dart_transmission_rpc: ^0.1.1
+  #dart_transmission_rpc: ^0.1.1
+
   flutter_context_menu: ^0.2.0
   reorderables: ^0.6.0
   font_awesome_flutter: ^10.8.0
+  logger: ^2.5.0
+  http: ^1.2.2
 
 #dependency_overrides:
   #dio: ^5.0.6
