--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   http: ^1.2.2
   auto_scroll: ^0.2.0
   intl: ^0.20.1
+  fl_chart: ^0.69.2
+  circular_buffer: ^0.12.0
+  drift: ^2.22.1
+  drift_flutter: ^0.2.2
 
 #dependency_overrides:
   #dio: ^5.0.6
@@ -74,6 +78,7 @@ dev_dependencies:
   custom_lint: ^0.7.0
   riverpod_lint: ^2.6.2
   test: ^1.25.7
+  drift_dev: ^2.22.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
