--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -27,5 +27,7 @@ linter:
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
 analyzer:
+  exclude:
+    - "**/*.g.dart"
   plugins:
     - custom_lint
