--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,6 @@ dependencies:
   flutter_resizable_container: ^3.0.0
   #dart_transmission_rpc: ^0.1.1
 
-  flutter_context_menu: ^0.2.0
   reorderables: ^0.6.0
   font_awesome_flutter: ^10.8.0
   logger: ^2.5.0
@@ -65,6 +64,7 @@ dependencies:
   hold_down_button: ^1.1.0
   macos_window_utils: ^1.6.1
   flutter_local_notifications: ^18.0.1
+  super_context_menu: ^0.8.24
 
 #dependency_overrides:
   #dio: ^5.0.6
