- base for server manager - moving to hive

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   macos_window_utils: ^1.6.1
   flutter_local_notifications: ^18.0.1
   super_context_menu: ^0.8.24
+  hive_ce: ^2.8.0+3
+  hive_ce_flutter: ^2.2.0
 
 #dependency_overrides:
   #dio: ^5.0.6
