--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   super_context_menu: ^0.8.24
   hive_ce: ^2.8.0+3
   hive_ce_flutter: ^2.2.0
+  file_picker: ^8.1.7
 
 #dependency_overrides:
   #dio: ^5.0.6
